<?xml version="1.0"?>
<package format="2">
    <name>gcs_vocal</name>
    <version>0.0.1</version>
    <description>The gcs_vocal package</description>
    <maintainer email="contact@jaydengrubb.com">Jayden Grubb</maintainer>
    <license>LGPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <!-- Additionally depends on: -->
    <!-- * espeak-ng (apt package) -->
    <!-- * espeakng (pip package) -->
</package>
